Adjust catalog.json to fit screen (ontouchmove has a bug with overflow-y: auto)

--- a/gf_timeline/css/style.css
+++ b/gf_timeline/css/style.css
@@ -227,8 +227,9 @@ body {
 	background-color: #3B3837;
 	color: #FFF;
 	margin: 20px;
+	overflow-x: hidden;
 	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
+	-webkit-overflow-scrolling: auto;
 	width: 90%;
 	max-height: 790px;
 }
@@ -300,8 +301,9 @@ body {
 	background-color: #3B3837;
 	color: #FFF;
 	margin: 20px;
+	overflow-x: hidden;
 	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
+	-webkit-overflow-scrolling: auto;
 	width: 90%;
 	max-height: 790px;
 }
